1. api格式兼容是处理  2. 接口请求参数兼容性处理   3. 支持接口粒度控制

--- a/template/example.full.js.hbs
+++ b/template/example.full.js.hbs
@@ -26,8 +26,13 @@ import {{ upperCase serverName }} from './api/{{ serverName }}/api';
 {{#if data}}
     data: {
     {{#list data}}
+        {{#isObject default }}
+        {{> requestObject default }}
+        {{else}}
         {{{ formatStr name }}}: {{{ formatRequest default }}},
+        {{/isObject}}
     {{/list}}
+
     },
 {{/if}}
 {{#if headers}}
