--- a/template/config.js.hbs
+++ b/template/config.js.hbs
@@ -5,7 +5,7 @@ module.exports = {
     {{ apiName }}: {
         url: '{{ url }}',
         method: '{{ method }}',
-        baseURL: '{{ genBaseURL baseURL }}',
+        baseURL: '{{ genBaseURL baseURL serverName }}',
     {{#if extra}}
         {{#each extra}}
         {{name}}: {{value}},
