--- a/template/example.required.js.hbs
+++ b/template/example.required.js.hbs
@@ -30,7 +30,5 @@ import {{ upperCase serverName }} from './api/{{ serverName }}/api';
 {{/if}}
 }).then(result => {
     console.log(result);
-}).catch(error => {
-    console.log(error);
-});
+}).catch(() => {});
 {{/list}}
